<resources>
    <string name="app_name">ChowDetails</string>
    <string name="ActiFood">ActiFood</string>
    <string name="PrefText">Preferences</string>
    <string name="Menu">Menu</string>
    <string name="Option">Option</string>
    <string name="Favorite">Favorite</string>
    <string name="TailleCara">Taille Caractère:</string>
    <string name="Color">Couleur:</string>
    <string name="Alergie">Allergies/Intolerance:</string>
    <string name="Photo">Afficher la photo des aliments:</string>
    <string name="Night">Activer le mode nuit:</string>
    <string name="Maj">Mettre à jour la base de donnée?</string>
    <string name="search_H">Recherche</string>

    <string-array name="ColorSpinArray">
        <item>Blanc</item>
        <item>Bleu</item>
        <item>Rouge</item>
        <item>Vert</item>
    </string-array>

    <string-array name="TpoliceSpinArray">
        <item>Petit</item>
        <item>Normal</item>
        <item>Grand</item>
    </string-array>

    <string-array name="allergieSpinArray">
        <item> </item>
        <item>Arachide</item>
        <item>Lactose</item>
        <item>Gluten</item>
    </string-array>

    </resources>
