<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/preference"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:title="@string/PrefText"
    tools:context="be.ecam.chowdetails.chowdetails.FoodMainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrefText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="22dp"
        android:id="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TailleCara"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView2"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Color"
        android:id="@+id/textView4"
        android:layout_below="@+id/tpoliceSpin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Alergie"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Photo"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/textView6"
        />
    <CheckBox
        android:id="@+id/checkBoxPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:onClick="onCheckboxClicked"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Night"
        android:id="@+id/textView7"
        android:layout_below="@+id/checkBoxPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <CheckBox
        android:id="@+id/checkBoxNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:id="@+id/button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="47dp"
        android:text="@string/Maj" />

    <Spinner
        android:id="@+id/colorSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/checkBoxNight"
        android:layout_alignEnd="@+id/checkBoxNight"
        android:background="@color/transparent" />

    <Spinner
        android:id="@+id/tpoliceSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBoxPhoto"
        android:layout_alignRight="@+id/checkBoxPhoto"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView1" />

    <Spinner
        android:id="@+id/allergieSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignRight="@+id/button02"
        android:layout_alignEnd="@+id/button02"
        android:layout_toRightOf="@+id/colorSpin"
        android:layout_toEndOf="@+id/colorSpin" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colorSpin"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5" />


</RelativeLayout>
